@@ -1,4 +1,4 @@
-package org.java.security;
+package org.java.security.JCA;
 
 import java.security.AccessControlContext;
 import java.security.AccessController;
@@ -9,15 +9,6 @@ import javax.crypto.Cipher;
 import javax.crypto.KeyGenerator;
 
 /**
- * http://docs.oracle.com/javase/8/docs/technotes/guides/security/crypto/CryptoSpec.html
- *Permissions fall into these categories: File, Socket, Net,
- * Security, Runtime, Property, AWT, Reflect, and Serializable
- * 
- * java command are by default not run with a SecurityManager installed
- * 1.setSecurityManager method
- * 2.-Djava.security.manager  开启java的安全模式
- * 
- * http://www.cnblogs.com/yiwangzhibujian/p/6207212.html
  * 
  * The Java platform defines a set of APIs spanning major security areas, including cryptography, public key infrastructure,
  *  authentication, secure communication, and access control. These APIs allow developers to easily integrate security mechanisms into their application code. 
@@ -30,24 +21,7 @@ public class JCA_JavaCryptographyArchitecture
     public static void main( String[] args )throws Exception
     {
         
-        // access control
-        SecurityManager security = System.getSecurityManager();
-        
-       // System.out.println(security.getClass());
-        if (security != null) {
-            //security.checkXXX(argument,  . . . );
-            
-           Integer x =  AccessController.doPrivileged(new PrivilegedAction<Integer>(){
-
-                public Integer run() {
-                    return 5;
-                }
-                
-                
-            },(AccessControlContext) security.getSecurityContext());
-            
-            
-        }
+       
         
         //Provider Architecture
         //providers ("Sun", "SunJSSE", "SunJCE", "SunRsaSign") 
